src/test/ui/static/static-mut-not-constant.stderr
error[E0010]: allocations are not allowed in statics
  --> $DIR/static-mut-not-constant.rs:3:28
   |
LL | static mut a: Box<isize> = box 3;
   |                            ^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/static-mut-not-constant.rs:3:32
   |
LL | static mut a: Box<isize> = box 3;
   |                                ^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0010, E0019.
For more information about an error, try `rustc --explain E0010`.
